--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "framer-motion": "^11.3.21",
     "framer-motion-3d": "^11.3.21",
     "gsap": "^3.12.5",
+    "gsap-trial": "^3.12.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-helmet": "^6.1.0",
     "react-progressive-graceful-image": "^0.7.0",
     "react-router-dom": "^6.26.0",
     "react-scripts": "5.0.1",
