--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "framer-motion-3d": "^11.3.21",
     "gsap": "^3.12.5",
     "gsap-trial": "^3.12.5",
+    "mui": "^0.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet": "^6.1.0",
