--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "gsap-trial": "^3.12.5",
     "mui": "^0.0.1",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
     "react-helmet": "^6.1.0",
+    "react-icons": "^5.3.0",
     "react-progressive-graceful-image": "^0.7.0",
     "react-router-dom": "^6.26.0",
     "react-scripts": "5.0.1",
